intent + user info set

--- a/app/src/main/res/layout/activity_user_information.xml
+++ b/app/src/main/res/layout/activity_user_information.xml
@@ -7,12 +7,16 @@
     android:background="@color/colorBackground"
     tools:context=".ui.neighbour_list.UserInformationActivity">
 
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbarUserInfo"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.40" />
+        android:elevation="4dp"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/ToolbarTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/iVUserAvatar" />
 
     <ImageView
         android:id="@+id/iVUserAvatar"
@@ -40,6 +44,29 @@
         app:layout_constraintStart_toStartOf="@+id/iVUserAvatar"
         tools:text="User Name" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabAddToFavourite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="275dp"
+        android:backgroundTint="@color/colorTextWhite"
+        android:clickable="true"
+        android:contentDescription="@string/star"
+        android:focusable="true"
+        android:tint="@color/colorBackground"
+        android:background="@color/colorBackground"
+        app:backgroundTint="@color/colorTextWhite"
+        app:layout_constraintEnd_toEndOf="@+id/cardViewUserInfo"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_star_white_24dp" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.40" />
+
     <android.support.constraint.Guideline
         android:id="@+id/guideline2"
         android:layout_width="wrap_content"
@@ -48,7 +75,7 @@
         app:layout_constraintGuide_percent="0.70" />
 
     <android.support.v7.widget.CardView
-        android:id="@+id/cardView"
+        android:id="@+id/cardViewUserInfo"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="16dp"
@@ -65,6 +92,7 @@
                 android:id="@+id/cvName"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:elevation="4dp"
                 android:foregroundTint="@color/colorBackground"
                 android:paddingLeft="16dp"
                 android:paddingTop="16dp"
@@ -78,6 +106,16 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="First Name" />
 
+            <View
+                android:id="@+id/view2"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:background="@color/colorBackground"
+                app:layout_constraintBottom_toTopOf="@+id/tvAddress"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/cvName" />
+
             <TextView
                 android:id="@+id/tvAddress"
                 android:layout_width="0dp"
@@ -88,7 +126,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/ivLocation"
-                app:layout_constraintTop_toBottomOf="@+id/cvName"
+                app:layout_constraintTop_toBottomOf="@id/view2"
                 tools:text="Address" />
 
             <TextView
@@ -104,6 +142,20 @@
                 app:layout_constraintTop_toBottomOf="@+id/tvAddress"
                 app:layout_constraintVertical_bias="0.0"
                 tools:text="Phone number" />
+
+            <TextView
+                android:id="@+id/tvEmailAddress"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="@+id/tvPhoneNumber"
+                app:layout_constraintTop_toBottomOf="@+id/tvPhoneNumber"
+                app:layout_constraintVertical_bias="1.0"
+                tools:text="Email address" />
 
             <ImageView
                 android:id="@+id/ivLocation"
@@ -144,30 +196,17 @@
                 app:layout_constraintTop_toTopOf="@+id/tvEmailAddress"
                 app:srcCompat="@drawable/ic_globe" />
 
-            <TextView
-                android:id="@+id/tvEmailAddress"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="@+id/tvPhoneNumber"
-                app:layout_constraintTop_toBottomOf="@+id/tvPhoneNumber"
-                app:layout_constraintVertical_bias="1.0"
-                tools:text="Email address" />
-
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardViewUserDescription"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="@+id/cardView"
+        app:layout_constraintEnd_toEndOf="@+id/cardViewUserInfo"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/cardView"
+        app:layout_constraintStart_toStartOf="@+id/cardViewUserInfo"
         app:layout_constraintTop_toTopOf="@+id/guideline2">
 
         <LinearLayout
@@ -188,41 +227,19 @@
                 android:textSize="24sp"
                 android:textStyle="normal" />
 
+            <View
+                android:id="@+id/view"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorBackground" />
+
             <TextView
                 android:id="@+id/tvAProposDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="16dp"
-                android:textSize="20sp"
+                android:textSize="16sp"
                 tools:text="@string/a_propos_de_moi" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
-
-    <ImageView
-        android:id="@+id/ivReturnArrow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:tint="@color/colorTextWhite"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="?attr/actionModeCloseDrawable"
-        android:contentDescription="@string/return_arrow" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabAddToFavourite"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="275dp"
-        android:backgroundTint="@color/colorTextWhite"
-        android:clickable="true"
-        android:contentDescription="@string/star"
-        android:focusable="true"
-        android:tint="@color/colorBackground"
-        app:backgroundTint="@color/colorTextWhite"
-        app:layout_constraintEnd_toEndOf="@+id/cardView"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_star_white_24dp" />
-
 </android.support.constraint.ConstraintLayout>
