--- a/app/src/main/res/layout/activity_add_neighbour.xml
+++ b/app/src/main/res/layout/activity_add_neighbour.xml
@@ -9,9 +9,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginStart="18dp"
         android:layout_marginEnd="18dp"
+        android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -19,8 +19,9 @@
             android:id="@+id/avatar"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="40dp"
-            android:layout_gravity="center_horizontal"/>
+            android:contentDescription="@string/user_avatar_from_url" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/nameLyt"
@@ -34,7 +35,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="Name"
+                android:hint="@string/name"
                 android:inputType="textPersonName" />
         </android.support.design.widget.TextInputLayout>
 
@@ -50,7 +51,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="Phone number"
+                android:hint="@string/phone_number"
                 android:inputType="phone" />
         </android.support.design.widget.TextInputLayout>
 
@@ -66,7 +67,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="Address"
+                android:hint="@string/address"
                 android:inputType="text" />
         </android.support.design.widget.TextInputLayout>
 
@@ -82,7 +83,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="email"
+                android:hint="@string/email"
                 android:inputType="text" />
         </android.support.design.widget.TextInputLayout>
 
@@ -97,11 +98,11 @@
                 android:id="@+id/aboutMe"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:lines="4"
-                android:minLines="4"
                 android:ems="10"
-                android:hint="About me"
-                android:inputType="textMultiLine" />
+                android:hint="@string/about_me"
+                android:inputType="textMultiLine"
+                android:lines="4"
+                android:minLines="4" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.button.MaterialButton
@@ -109,11 +110,11 @@
             style="@style/Widget.MaterialComponents.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:enabled="false"
             android:layout_gravity="center"
-            app:cornerRadius="20dp"
             android:layout_marginTop="20dp"
-            android:text="Save"/>
+            android:enabled="false"
+            android:text="@string/save"
+            app:cornerRadius="20dp" />
 
     </LinearLayout>
 
