--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,14 +19,7 @@
 
     <style name="ToolbarTheme" parent="@style/ThemeOverlay.AppCompat.ActionBar">
         <!-- Customize color of navigation drawer icon and back arrow -->
-        <item name="android:textColorSecondary">@color/colorTextWhite</item>
-        <item name="colorControlNormal">@color/colorTextWhite</item>
-        <item name="android:colorControlHighlight">@color/colorTextWhite</item>
-        <item name="android:colorControlActivated">@color/colorTextWhite</item>
-        <item name="android:colorControlNormal">@color/colorTextWhite</item>
-        <item name="colorButtonNormal">@color/colorTextWhite</item>
-        <item name="colorPrimary">@color/colorTextWhite</item>
-        <item name="android:drawableTint">@color/colorTextWhite</item>
+        <item name="colorControlNormal">@color/colorBackground</item>
     </style>
 
 </resources>
